main.css
/** Global style **/

body {
  font-family: 'Montserrat', sans-serif;
  margin: 0;
  background-color: #F0F0DF;
  color: #343d46;
  line-height: 1.5;
  padding: 4em 1em 2rem;
}

body.dark {
  color: #F0F0DF;
  background-color: #343d46;
}

.main {
  margin: 0 auto;
  max-width: 50em;
  padding: 0 0 2rem;
}

.container {
  max-width: 75%;
}

a {
  color: #007BBA;
  text-decoration: none;
}

a.dark {
  color: rgb(153, 221, 255);
}

a:hover {
  text-decoration: underline;
  color: rgb(4, 82, 121);
}

a.dark:hover {
  text-decoration: underline;
  color: rgb(14, 175, 255);
}

h1 {
  font-size: 1.7rem;
  font-family: 'Playfair Display', serif;
}

h2 {
  font-family: 'Playfair Display', serif;
  font-size: 1.2rem;
}

/** Footer and header style **/

header {
  display: flex;
  justify-content: center;
  font-weight: 200;
  margin: 0 auto 4rem;
}

footer {
  font-weight: 200;
  margin: 4rem auto 0;
}

.footer-row {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.footer-item, .header-item {
  margin-left: 12px;
}

footer a, header a {
  color: #343d46;
  text-decoration: none;
}

footer.dark a, header.dark a {
  color: #F0F0DF;
}

header a:hover, footer a:hover {
  text-decoration: underline;
}

/** Home page **/

.quote-container {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: calc(100vh - 13rem);
}

.quote {
  font-family: 'Playfair Display', serif;
  color: #343d46;
  display: flex;
  flex-direction: column;
}

.quote.dark {
  color: #F0F0DF;
}

.quote-content {
  font-size: 2.5rem;
  text-align: center;
}

.quote-details {
  align-self: flex-end;
  margin-top: 2rem;
  font-size: 1.2rem;
  text-align: end;
}

@media all and (max-width: 1023px) {
  .container {
    max-width: 80%;
  }
  .quote-content {
    font-size: 2.2rem;
  }
}

@media all and (max-width: 767px) {
  .container {
    max-width: 85%;
  }
  .quote-content {
    font-size: 2rem;
  }
}

@media all and (max-width: 450px) {
  .container {
    max-width: 90%;
  }
  .quote-content {
    font-size: 1.5rem;
  }
  .quote-details {
    font-size: 1rem;
  }
}

